--- a/index.html
+++ b/index.html
@@ -1,88 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Host Side </title>
+    <title>Host Side</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <style>
-      body {
-        background-image: url('https://img.freepik.com/premium-photo/live-rock-concert-party-festival-night-club-crowd-cheering-stage-lights-confetti-falling-cheerin_1081224-111.jpg?w=740');
-        background-size: cover;
-        background-position: center;
-      }
-      .backdrop-blur {
-        backdrop-filter: blur(10px);
-      }
-  
-      
-  </style>
+        /* Body styling */
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://media.textadventures.co.uk/coverart/b69281d8-93b6-4c6a-a964-441dddfe8a9d.jpg');
+            background-size: cover;
+            background-position: center;
+            color: white;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        /* Container for form styling */
+        .container {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border-radius: 15px;
+            padding: 2rem;
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+            width: 400px;
+            max-width: 100%;
+        }
+
+        /* Form title styling */
+        .form-title {
+            font-size: 2rem;
+            font-weight: 600;
+            margin-bottom: 1.5rem;
+            text-align: center;
+            text-transform: uppercase;
+            letter-spacing: 1.2px;
+        }
+
+        /* Input group styling */
+        .input-group {
+            position: relative;
+            margin-bottom: 1.5rem;
+        }
+
+        .input-group i {
+            position: absolute;
+            top: 50%;
+            left: 15px;
+            transform: translateY(-50%);
+            color: #ccc;
+            font-size: 1.2rem;
+        }
+
+        .input-group input {
+            width: 100%;
+            padding: 12px 15px 12px 45px;
+            font-size: 1rem;
+            border: none;
+            border-radius: 5px;
+            outline: none;
+            background: rgba(255, 255, 255, 0.8);
+            color: #333;
+            transition: all 0.3s ease;
+        }
+
+        .input-group input:focus {
+            background: rgba(255, 255, 255, 1);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .input-group label {
+            display: block;
+            margin-top: 8px;
+            font-size: 0.9rem;
+            color: #ddd;
+        }
+
+        /* Button styling */
+        .btn {
+            width: 100%;
+            padding: 12px;
+            font-size: 1.1rem;
+            font-weight: bold;
+            color: white;
+            background: linear-gradient(135deg, #ff416c, #ff4b2b);
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.4s ease;
+        }
+
+        .btn:hover {
+            background: linear-gradient(135deg, #ff4b2b, #ff416c);
+        }
+
+        /* Links and alternative options */
+        .or {
+            text-align: center;
+            margin: 1.5rem 0;
+            color: #ddd;
+        }
+
+        .links {
+            text-align: center;
+        }
+
+        .links button {
+            background: none;
+            border: none;
+            color: #ff416c;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .links button:hover {
+            color: #ff4b2b;
+            text-decoration: underline;
+        }
+
+        /* Media query for responsiveness */
+        @media (max-width: 500px) {
+            .container {
+                padding: 1.5rem;
+            }
+
+            .form-title {
+                font-size: 1.5rem;
+            }
+
+            .input-group input {
+                font-size: 0.9rem;
+            }
+
+            .btn {
+                font-size: 1rem;
+            }
+        }
+    </style>
     <script type="module" src="firebaseauth.js"></script>
 </head>
+
 <body>
     <div class="container" id="signup" style="display:none;">
-      <h1 class="form-title">Register</h1>
-      <form method="post" action="">
-        <div id="signUpMessage" class="messageDiv" style="display:none;"></div>
-        <div class="input-group">
-           <i class="fas fa-user"></i>
-           <input type="text"  id="fName" placeholder="First Name" required>
-           <label for="fname">First Name</label>
+        <h1 class="form-title">Register</h1>
+        <form method="post" action="">
+            <div id="signUpMessage" class="messageDiv" style="display:none;"></div>
+            <div class="input-group">
+                <i class="fas fa-user"></i>
+                <input type="text" id="fName" placeholder="First Name" required>
+                <label for="fname">First Name</label>
+            </div>
+            <div class="input-group">
+                <i class="fas fa-user"></i>
+                <input type="text" id="lName" placeholder="Last Name" required>
+                <label for="lName">Last Name</label>
+            </div>
+            <div class="input-group">
+                <i class="fas fa-envelope"></i>
+                <input type="email" id="rEmail" placeholder="VIT Email" required>
+                <label for="rEmail">VIT Email</label>
+            </div>
+            <div class="input-group">
+                <i class="fas fa-lock"></i>
+                <input type="password" id="rPassword" placeholder="Registration Number" required>
+                <label for="rPassword">Enter Your Registration No:</label>
+            </div>
+            <button class="btn" id="submitSignUp">Sign Up</button>
+        </form>
+        <p class="or">----------or----------</p>
+        <div class="links">
+            <p>Already Have Account?</p>
+            <button id="signInButton">Sign In</button>
         </div>
-        <div class="input-group">
-            <i class="fas fa-user"></i>
-            <input type="text"  id="lName" placeholder="Last Name" required>
-            <label for="lName">Last Name</label>
-        </div>
-        <div class="input-group">
-            <i class="fas fa-envelope"></i>
-            <input type="email"  id="rEmail" placeholder="VIT Email" required>
-            <label for="rEmail">VIT Email</label>
-        </div>
-        <div class="input-group">
-            <i class="fas fa-lock"></i>
-            <input type="password" id="rPassword"  placeholder="Registerion Number" required>
-            <label for="rPassword">Enter Your Registration No:-</label>
-        </div>
-       <button class="btn" id="submitSignUp" >Sign Up</button>
-      </form>
-      <p class="or">
-        ----------or--------
-      </p>
-      <div class="links">
-        <p>Already Have Account ?</p>
-        <button id="signInButton">Sign In</button>
-      </div>
     </div>
 
-  <div class="container" id="signIn">
+    <div class="container" id="signIn">
         <h1 class="form-title">Sign In</h1>
         <form method="post" action="">
-          <div id="signInMessage" class="messageDiv" style="display:none;"></div>
-
-          <div class="input-group">
-              <i class="fas fa-envelope"></i>
-              <input type="email"  id="email" placeholder="Email" required>
-              <label for="email">VIT Email</label>
-          </div>
-          <div class="input-group">
-              <i class="fas fa-lock"></i>
-            <input type="password" id="password"  placeholder="Registion Number" required>
-              <label for="password">Registion Number</label>
-          </div>
-        
-         <button  class="btn"  id="submitSignIn">Sign In</button>
+            <div id="signInMessage" class="messageDiv" style="display:none;"></div>
+            <div class="input-group">
+                <i class="fas fa-envelope"></i>
+                <input type="email" id="email" placeholder="Email" required>
+                <!-- <label for="email">VIT Email</label> -->
+            </div>
+            <div class="input-group">
+                <i class="fas fa-lock"></i>
+                <input type="password" id="password" placeholder="Registration Number" required>
+                <!-- <label for="password">Registration Number</label> -->
+            </div>
+            <button class="btn" id="submitSignIn">Sign In</button>
         </form>
-        <p class="or">
-          ----------or--------
-        </p>
-
+        <p class="or">----------or----------</p>
         <div class="links">
-          <p>Don't have account yet?</p>
-          <button id="signUpButton">Sign Up</button>
+            <p>Don't have account yet?</p>
+            <button id="signUpButton">Sign Up</button>
         </div>
-      </div>
-      <script src="script.js"></script>
+    </div>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
